Fixed drawing bug on mobile

--- a/pouvoirs/public/css/style.css
+++ b/pouvoirs/public/css/style.css
@@ -322,6 +322,7 @@ b {
 
 #p2 {
   background: white;
+  touch-action: none;
 }
 
 #bulle-container-pm, #bulle-container-moua {
